# gui_altera_fpga_demo

./: Cargo.toml  README.md  build.rs  nios2.cfg  original.tcl  usb-blaster.cfg
sofs/: tpg_colour_bars.sof  tpg_grayscale_bars.sof
src/: main.rs
