[package]
name = "HdmiSwitchDemo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
druid = "0.8.3"
fern = { version = "0.7.1", features = ["colored"] }
image = "0.25.5"
log = "0.4.26"
regex = "1.11.1"
tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
